Fix iOS7/Safari problem where results were not visible and map no touchable

--- a/rando/static/css/style.less
+++ b/rando/static/css/style.less
@@ -317,11 +317,10 @@ ul.row-footer {
   }
 }
 
-#content {
-  width:100%;
-  height: 100%;
+.detail-content {
   position:absolute;
   top: 0;
+  bottom: 0;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
